[gd_scene load_steps=13 format=2]

[ext_resource path="res://scene/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/NearDeathBorder.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/DepthMeter.tscn" type="PackedScene" id=6]
[ext_resource path="res://scene/AllEnemiesDead.tscn" type="PackedScene" id=7]
[ext_resource path="res://scene/PauseMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://scene/AbilitiesDisplay.tscn" type="PackedScene" id=9]
[ext_resource path="res://scene/DeathScreen.tscn" type="PackedScene" id=10]
[ext_resource path="res://script/ui.gd" type="Script" id=18]
[ext_resource path="res://script/near_death_border.gd" type="Script" id=19]
[ext_resource path="res://script/black_bars.gd" type="Script" id=20]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 fill_color: hint_color = vec4(1.0, 0.0, 0.0, 1.0);

void fragment() {
	vec4 texcolor = texture(TEXTURE, UV);
	vec2 uv = vec2(0.5) - UV;
	float x = 2.75 * TIME;
	float trig = max(sin(x), cos(x));
	float t = trig * 0.5 + 0.5;
	COLOR = mix(texcolor, fill_color, max((length(uv) - pow(0.5, 2)) * t, 0));
	
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/fill_color = Color( 1, 0, 0, 1 )

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 18 )

[node name="NearDeathBorder" parent="." instance=ExtResource( 5 )]
visible = false
material = SubResource( 2 )
script = ExtResource( 19 )

[node name="BlackBars" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 20 )

[node name="Left" type="Panel" parent="BlackBars"]
modulate = Color( 0, 0, 0, 0 )
margin_right = 127.0
margin_bottom = 600.0
rect_min_size = Vector2( 112, 0 )
size_flags_horizontal = 3

[node name="Control" type="Control" parent="BlackBars"]
margin_left = 131.0
margin_right = 893.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0

[node name="Right" type="Panel" parent="BlackBars"]
modulate = Color( 0, 0, 0, 0 )
margin_left = 897.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 112, 0 )
size_flags_horizontal = 3

[node name="Tween" type="Tween" parent="BlackBars"]

[node name="HealthBar" parent="." instance=ExtResource( 2 )]
anchor_top = 1.0
anchor_right = 0.0
margin_top = -80.0
size_flags_horizontal = 2
size_flags_vertical = 2
hseperation = -12

[node name="DepthGauge" parent="." instance=ExtResource( 6 )]
visible = false
anchor_right = 0.0

[node name="AllEnemiesDead" parent="." instance=ExtResource( 7 )]
visible = false

[node name="DeathScreen" parent="." instance=ExtResource( 10 )]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_right = 1024.0
margin_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="PauseScreen" parent="." instance=ExtResource( 8 )]
visible = false
grow_horizontal = 1

[node name="AbilitiesDisplay" parent="." instance=ExtResource( 9 )]
margin_left = -16.0
margin_top = -16.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Panel" type="Panel" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 1
input_pass_on_modal_close_click = false
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Tween" type="Tween" parent="."]
